refactor: redesign Myotus API and harden experience handling
- replace facade-style entry points with typed APIs, optional lookups, command adapters, and documented API artifacts
- normalize XP sources to raw points with explicit storage conversion and atomic AE2 energy/storage consumption
- harden terminal-upgrade lifecycle persistence and expand AE2 GameTests across Forge and NeoForge